--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -52,6 +52,10 @@
     <string name="register_privacy_policy">&#160;chính sách bảo mật</string>
     <string name="register_privacy_policy_promotions"></string>
     <string name="register_over_21">Tôi đã 21 tuổi, đã đọc và đồng ý với&#160;</string>
+    <string name="register_success">Đăng ký thành công</string>
+    <string name="register_watch_first">Khám phá trò chơi</string>
+    <string name="register_jump">Trang sẽ chuyển sang %s 5 giây sau đó.</string>
+    <string name="register_recharge_now">Nạp tiền ngay bây giờ</string>
     <string name="register_rules">&#160;luật &amp; điều khoản của</string>
     <string name="confirm_password">Xác nhận mật khẩu</string>
     <string name="hint_confirm_password">Vui lòng nhập lại mật khẩu</string>
