[Fix] 23349 【Android】英越語系彈窗文字翻譯來去逛逛錯誤，與立即充值文字全顯示大寫

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -750,7 +750,7 @@
     <string name="my_favorite">My Events</string>
     <string name="credit_bet_record">Rounds history</string>
     <string name="all_plat_type">All platform types</string>
-    <string name="visit_first">Go around</string>
+    <string name="visit_first">Explore the game</string>
     <string name="bet_number">Count</string>
     <string name="bet_money">Amount</string>
     <string name="profit_and_loss">Result</string>
