--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -738,7 +738,7 @@
     <string name="other_bet_record">lịch sử đặt cược khác</string>
     <string name="credit_bet_record">Lịch sử chu kỳ</string>
     <string name="all_plat_type">Tất cả các loại nền tảng</string>
-    <string name="visit_first">Hãy đến và đi lang thang</string>
+    <string name="visit_first">Khám phá trò chơi</string>
     <string name="bet_number">Số lượt đặt cược</string>
     <string name="bet_money">Số tiền đặt cược</string>
     <string name="profit_and_loss">Lãi và lỗ</string>
