--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -769,6 +769,7 @@
     <string name="odd_type_hk">HK Odds</string>
     <string name="odd_type_mys">MYS Odds</string>
     <string name="odd_type_idn">IDN Odds</string>
+    <string name="withdraw_uw_check">Deduction</string>
     <string name="choose_method">Choose channel</string>
     <string name="choose_order">Select bets</string>
     <string name="submit_time">Submit time:</string>
