[調整] 優惠活動 英文文字

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -290,7 +290,7 @@
     <string name="help_center">Help</string>
     <string name="fund_detail">Fund Details</string>
     <string name="feedback">Feedback</string>
-    <string name="promotion">Promotion Activity</string>
+    <string name="promotion">Promotions</string>
     <string name="need_improve">Need to be completed</string>
     <string name="profile_info">Your Info</string>
     <string name="avatar">Profile photo</string>
