--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1002,7 +1002,7 @@
     <string name="self_limit_per_bet_limit_highest">Upper limit</string>
     <string name="self_limit_per_bet_limit_input_highest">Please enter numbers</string>
     <string name="self_limit_per_bet_limit_impotent">·You can modify your limit bet at any time. The modification will be active, after that sending the request. </string>
-    <string name="self_limit_per_bet_limit_user">‧Current limit Bet: %s</string>
+    <string name="self_limit_per_bet_limit_user">Current limit Bet: %s</string>
     <string name="self_limit_per_bet_limit_user_none">None</string>
     <string name="self_limit_per_bet_limit_user_limit"> (Maximum limited bet:%1$s %3$s-%2$s %3$s)</string>
     <string name="self_limit_error">The field format is incorrect, please enter an integer.</string>
