--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -201,7 +201,7 @@
     <string name="infomation_center">Information</string>
     <string name="left_menu_odds_type_setting">Odds Setting</string>
     <string name="go_back_home_page">Back to main page</string>
-    <string name="profile_center">Your profile</string>
+    <string name="profile_center">Profile</string>
     <string name="member_level">Member level</string>
     <string name="game_settlement">Result</string>
     <string name="version_update">Update version</string>
