[修正] 在線充值 网银线上 渠道名稱

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -513,7 +513,7 @@
     <string name="online_bank">Banking</string>
     <string name="online_juan">JuanCash</string>
     <string name="online_dispenshing">Withdraw</string>
-    <string name="online_online_bank">網銀</string>
+    <string name="online_online_bank">Internet Banking</string>
     <string name="online_gcash">Gcash</string>
     <string name="online_grab">GrabPay</string>
     <string name="online_maya">PayMaya</string>
