--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -502,7 +502,7 @@
     <string name="online_bank">在线网银</string>
     <string name="online_juan">JuanCash</string>
     <string name="online_dispenshing">出款</string>
-    <string name="online_online_bank">網銀</string>
+    <string name="online_online_bank">网银线上</string>
     <string name="online_gcash">Gcash</string>
     <string name="online_grab">GrabPay</string>
     <string name="online_maya">PayMaya</string>
