--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -787,8 +787,8 @@
     <string name="account_history_overview">Account history review</string>
     <string name="bet_num_and_bet_date">Betting order no. / Settled bets</string>
     <string name="date">Date</string>
-    <string name="bet_amount">Betting amount</string>
-    <string name="available_amount">Can use amount</string>
+    <string name="bet_amount">Bet</string>
+    <string name="available_amount">Valid amount</string>
     <string name="win_lose">Win / Lose</string>
     <string name="win_lose_mark">Win / Lose: </string>
     <string name="all_sport">All sports</string>
