--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1132,4 +1132,9 @@
     <string name="recommend_best_odd">Tỷ lệ cược tốt nhất</string>
     <string name="recommend_safe">Cá cược an toàn</string>
     <!--endregion-->
+
+    <!--region 我的賽事-->
+    <string name="my_favorite_empty_title">Sự kiện của tôi</string>
+    <string name="my_favorite_empty_msg">Chọn biểu tượng ở trên để thêm nó vào "Sự kiện của tôi".\nBạn có thể chia nhóm chúng và dễ dàng truy cập vào tất cả các sự kiện mà bạn quan tâm.</string>
+    <!--endregion-->
 </resources>
