--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1102,4 +1102,9 @@
     <string name="recommend_best_odd">Best odds</string>
     <string name="recommend_safe">Safe betting</string>
     <!--endregion-->
+
+    <!--region 我的賽事-->
+    <string name="my_favorite_empty_title">My Events</string>
+    <string name="my_favorite_empty_msg">Select the icon above，add to My Events.\nYou can group them and easily watch all the match that interest you.</string>
+    <!--endregion-->
 </resources>
