--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -32,7 +32,7 @@
     <string name="please_input_password">(Vui lòng nhập mật khẩu đăng nhập của bạn)</string>
     <string name="login_password">Đăng nhập mật khẩu</string>
     <string name="remember_password">Nhớ mật khẩu</string>
-    <string name="forget_password_question">quên mật khẩu ?</string>
+    <string name="forget_password_question">Quên mật khẩu?</string>
     <string name="desc_forget_password">vui lòng liên hệ chăm sóc khách hàng</string>
     <string name="sign_up_know">Đăng ký ngay</string>
     <string name="recommend_code">Mã giới thiệu</string>
@@ -114,7 +114,7 @@
     <string name="hint_security_code"><font size="12">(Vui lòng nhập mã xác nhận.)</font></string>
     <string name="dialog_security_need_phone">Thông tin cá nhân của bạn chưa hoàn chỉnh, vui lòng liên hệ với bộ phận chăm sóc khách hàng.</string>
     <string name="btn_agreement">Thỏa thuận mở tài khoản</string>
-    <string name="have_account">bạn đã có tài khoản?</string>
+    <string name="have_account">Bạn đã có tài khoản?</string>
     <string name="btn_login">Đăng nhập</string>
     <string name="btn_register">Đăng ký</string>
     <string name="no_announcement">Không có thông báo</string>
@@ -145,26 +145,26 @@
     <string name="versus">v</string>
     <string name="label_sport_game">quá trình trận đấu</string>
     <string name="label_account_history">Lịch sử</string>
-    <string name="label_transaction_status">đã cược</string>
+    <string name="label_transaction_status">Đã cược</string>
     <string name="label_title_parlay">Cược xiên tổng hợp</string>
     <string name="conspire">Xiên</string>
     <string name="message_no_at_start">Hiện tại không có sự kiện sắp tới</string>
     <string name="message_no_in_play">Hiện tại không có kết quả phù hợp</string>
     <string name="champion">Quán quân</string>
-    <string name="league">giải đấu</string>
-    <string name="monday">thứ hai</string>
-    <string name="tuesday">thứ ba</string>
-    <string name="wednesday">thứ tư</string>
-    <string name="thursday">thứ năm</string>
-    <string name="friday">thứ sáu</string>
-    <string name="saturday">thứ bảy</string>
-    <string name="sunday">chủ nhật</string>
+    <string name="league">Giải đấu</string>
+    <string name="monday">Thứ hai</string>
+    <string name="tuesday">Thứ ba</string>
+    <string name="wednesday">Thứ tư</string>
+    <string name="thursday">Thứ năm</string>
+    <string name="friday">Thứ sáu</string>
+    <string name="saturday">Thứ bảy</string>
+    <string name="sunday">Chủ nhật</string>
     <string name="game_announcement">Thông báo trò trơi</string>
     <string name="member_benefits">Quyền lợi thành viên</string>
     <string name="transfer_notes">Ghi chú chuyển khoản</string>
     <string name="best_recommend">Đề xuất tốt nhất</string>
     <string name="navigation_web">Mạng điều hướng</string>
-    <string name="other">SẮP TỚI</string>
+    <string name="other">Sắp tới</string>
     <string name="unknown_name"></string>
     <string name="games_lobby">Sảnh trò chơi</string>
     <string name="sport_game">Sport</string>
@@ -184,7 +184,7 @@
     <string name="game_settlement">Kết quả trận đấu</string>
     <string name="version_update">Tải xuống ứng dụng</string>
     <string name="odds_type">Kèo -%s</string>
-    <string name="sign_out">đăng xuất</string>
+    <string name="sign_out">Đăng xuất</string>
     <string name="label_version">mã phiên bản %s</string>
     <string name="now_level">cấp độ hiện tại:</string>
     <string name="growth_requirement">Giá trị tăng trưởng yêu cầu：</string>
@@ -208,15 +208,15 @@
     <string name="sport_bet_rule">Quy luật cá cược thể thao</string>
     <string name="common_sport_description">Mô tả chung về môn thể thao</string>
     <string name="overview">tổng quát</string>
-    <string name="select_all_league">chọn tất cả giải đấu</string>
-    <string name="select_cancel">hủy lựa chọn</string>
+    <string name="select_all_league">Chọn tất cả giải đấu</string>
+    <string name="select_cancel">Hủy lựa chọn</string>
     <string name="search">Tìm kiếm</string>
     <string name="game_type">Loại bóng</string>
     <string name="winner">Thắng</string>
-    <string name="first_half_game">hiệp 1</string>
-    <string name="second_half_game">hiệp 2</string>
+    <string name="first_half_game">Hiệp 1</string>
+    <string name="second_half_game">Hiệp 2</string>
     <string name="total_score">Tổng điểm</string>
-    <string name="full_game">toàn trận</string>
+    <string name="full_game">Toàn trận</string>
     <string name="game_result">Kết quả</string>
     <string name="game_yellow_card">Thẻ phạt</string>
     <string name="game_corner_kick">Phạt góc</string>
@@ -234,7 +234,7 @@
     <string name="rugby_football">Bóng bầu dục</string>
     <string name="america_football">Bóng đá Mỹ</string>
     <string name="motor_racing">Công thức 1</string>
-    <string name="golf">golf</string>
+    <string name="golf">Golf</string>
     <string name="financial_bets">Cược Tài Chính</string>
     <string name="upload_title">Tải lên tài liệu chứng minh nhân dân</string>
     <string name="upload_content">Vui lòng tải lên tài liệu chứng minh nhân dân</string>
@@ -288,7 +288,7 @@
     <string name="avatar">Ảnh đại diện</string>
     <string name="nickname">Tên</string>
     <string name="password_setting">Cài đặt mật khẩu</string>
-    <string name="modify_avatar">sửa đổi ảnh đại diện</string>
+    <string name="modify_avatar">Sửa đổi ảnh đại diện</string>
     <string name="choose_a_photo_from_the_album">chọn ảnh từ album</string>
     <string name="take_a_picture">Chụp ảnh</string>
     <string name="save_avatar_success">Ảnh đại diện tải lên thành công</string>
@@ -373,7 +373,7 @@
     <string name="match_names_2">Đội chủ nhà %s vs %s Đội khách</string>
     <string name="match_names_3">Đội chủ nhà %s V.S %s Đội khách</string>
     <string name="bet_item">Mục đặt cược</string>
-    <string name="match_type_row_in_play">TRONG TRẬN</string>
+    <string name="match_type_row_in_play">Trong trận</string>
     <string name="match_type_row_at_start">trận đấu sắp bắt đầu</string>
     <string name="at_start_remain_minute">%s phút</string>
     <string name="match_type_row_btn_bs">kèo chấp &amp; tài xỉu</string>
