--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -563,7 +563,7 @@
     <string name="hint_four_number_password">Withdrawal password</string>
     <string name="hint_please_enter_withdraw_password">withdrawal password</string>
     <string name="add_new">Add</string>
-    <string name="add_credit_card">Adding Bank card</string>
+    <string name="add_credit_card">Add Bank Card</string>
     <string name="add_crypto_card">Adding virtual coins</string>
     <string name="add_e_wallet">Adding eWallet</string>
     <string name="add_credit_or_virtual">add bank card / USDT / eWallet</string>
