--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1098,9 +1098,9 @@
 
     <!--region 宣傳頁-->
     <string name="hot_recommend">Recommended</string>
-    <string name="recommend_match">Thousand of match</string>
-    <string name="recommend_best_odd">Best odds</string>
-    <string name="recommend_safe">Safe betting</string>
+    <string name="recommend_match">10,000 Live Games Monthly</string>
+    <string name="recommend_best_odd">Better Prices Better Service</string>
+    <string name="recommend_safe">Secure, Easy, Fast Process</string>
     <!--endregion-->
 
     <!--region 我的賽事-->
