--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1094,9 +1094,9 @@
 
 <!--region 宣傳頁-->
     <string name="hot_recommend">热门推荐</string>
-    <string name="recommend_match">万场赛事</string>
-    <string name="recommend_best_odd">最佳赔率</string>
-    <string name="recommend_safe">安全投注</string>
+    <string name="recommend_match">月均10,000\n滚球赛事</string>
+    <string name="recommend_best_odd">最佳赔率\n最优服务</string>
+    <string name="recommend_safe">安全, 簡單,\n快速處理</string>
 <!--endregion-->
 
     <!--region 我的賽事-->
