23809 【Android】[建議] [英文] 版本更新欄位，建议文字一致

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -207,7 +207,7 @@
     <string name="version_update">Update Version</string>
     <string name="odds_type">Handicap-%s</string>
     <string name="sign_out">Logout</string>
-    <string name="label_version">Version number Ver %s</string>
+    <string name="label_version">Version Ver %s</string>
     <string name="now_level">Current level</string>
     <string name="growth_requirement">The account to level up need：</string>
     <string name="no_value">Nope</string>
