[Fix] public page icon & ui & string

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -122,7 +122,7 @@
     <string name="poker">Cờ vua</string>
     <string name="slot">GAME</string>
     <string name="fishing">Bắn cá</string>
-    <string name="more">Thêm</string>
+    <string name="more">hơn</string>
     <string name="home_tan_main">THỂ THAO</string>
     <string name="home_tab_in_play">TRONG TRẬN</string>
     <string name="home_tab_in_play2">Trong Trận</string>
