[fix] 個人中心頁 箭頭顏色修正為夜間模式用, 註冊頁面電話跑版客製化調整, 23689 英文投注搜尋頁面需修改(上半 未完)

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -43,7 +43,7 @@
     <string name="error_member_account">Tài khoản từ 4-16 ký tự bao gồm chữ và số</string>
     <string name="desc_register_checking_account">Đang kiểm tra tài khoản</string>
     <string name="error_register_id_exist">Tên tài khoản đã tồn tại</string>
-    <string name="hint_register_password">4–16 ký tự gồm chữ cái và số</string>
+    <string name="hint_register_password">(4–16 ký tự gồm chữ cái và số)</string>
     <string name="error_register_password">Mật khẩu từ 4-16 ký tự bao gồm chữ và số</string>
     <string name="error_password_format">Mật khẩu cần phải chữ và số</string>
     <string name="register_please_read">Hãy đọc kỹ</string>
@@ -58,19 +58,19 @@
     <string name="register_recharge_now">Gửi tiền ngay bây giờ</string>
     <string name="register_rules">&#160;luật &amp; điều khoản của</string>
     <string name="confirm_password">Xác nhận mật khẩu</string>
-    <string name="hint_confirm_password">Vui lòng nhập lại mật khẩu</string>
+    <string name="hint_confirm_password">(Vui lòng nhập lại mật khẩu)</string>
     <string name="error_confirm_password">Mật khẩu đăng nhập 2 lần không đồng nhất</string>
     <string name="withdrawal_pwd">Mật khẩu rút tiền</string>
-    <string name="hint_withdrawal_pwd">Mật khẩu gồm 4 chữ số</string>
+    <string name="hint_withdrawal_pwd">(Mật khẩu gồm 4 chữ số)</string>
     <string name="error_withdrawal_pwd">Mật khẩu bạn nhập không đúng</string>
     <string name="phone_number">Số điện thoại</string>
-    <string name="hint_phone_number">Vui lòng nhập số điện thoại</string>
+    <string name="hint_phone_number">(Vui lòng nhập số điện thoại)</string>
     <string name="error_phone_number">lỗi định dạng số điện thoại không hợp lệ</string>
     <string name="qq_number">QQsố</string>
-    <string name="hint_qq_number">Vui lòng nhập QQTài khoản</string>
+    <string name="hint_qq_number">(Vui lòng nhập QQTài khoản)</string>
     <string name="error_qq_number">Lỗi định dạng tài khoản QQ</string>
     <string name="e_mail">Email</string>
-    <string name="hint_e_mail">Vui lòng nhập email</string>
+    <string name="hint_e_mail">(Vui lòng nhập email)</string>
     <string name="error_e_mail">Lỗi định dạng email không đúng</string>
     <string name="postal_code">Mã bưu điện</string>
     <string name="hint_postal_code">(Vui lòng nhập mã ZIP)</string>
@@ -79,29 +79,29 @@
     <string name="city">Thành phố</string>
     <string name="hint_city">(Vui lòng nhập thành phố)</string>
     <string name="we_chat">Wechat</string>
-    <string name="hint_we_chat_number">Vui lòng nhập ID WeChat</string>
+    <string name="hint_we_chat_number">(Vui lòng nhập ID WeChat)</string>
     <string name="error_we_chat_number">lỗi định dạng Wechat ID không hợp lệ</string>
     <string name="zalo">Zalo</string>
-    <string name="hint_zalo">Vui lòng nhập tài khoản Zalo</string>
+    <string name="hint_zalo">(Vui lòng nhập tài khoản Zalo)</string>
     <string name="error_zalo">lỗi định dạng tài khoản Zalo không hợp lệ</string>
     <string name="facebook">Facebook</string>
-    <string name="hint_facebook">Vui lòng nhập tài khoản Facebook</string>
+    <string name="hint_facebook">(Vui lòng nhập tài khoản Facebook)</string>
     <string name="error_facebook">lỗi định dạng tài khoản Facebook không hợp lệ</string>
     <string name="whats_app">WhatsApp</string>
-    <string name="hint_whats_app">Vui lòng nhập tài khoản WhatsApp</string>
+    <string name="hint_whats_app">(Vui lòng nhập tài khoản WhatsApp)</string>
     <string name="error_whats_app">lỗi định dạng tài khoản Whatsapp không hợp lệ</string>
     <string name="telegram">Telegram</string>
-    <string name="hint_telegram">Vui lòng nhập tài khoản Telegram</string>
+    <string name="hint_telegram">(Vui lòng nhập tài khoản Telegram)</string>
     <string name="error_telegram">lỗi định dạng tài khoản Telegram không hợp lệ</string>
     <string name="security_pb">Câu hỏi an toàn</string>
     <string name="hint_security_pb">(Vui lòng nhập quốc gia yêu thích)</string>
     <string name="real_name">Họ tên thật</string>
-    <string name="hint_real_name">Họ tên phải đồng nhất với tài khoản ngân hàng</string>
+    <string name="hint_real_name">(Họ tên phải đồng nhất với tài khoản ngân hàng)</string>
     <string name="verification_code">Mã xác nhận</string>
     <string name="verification_code_by_sms">Mã xác nhận SMS</string>
     <string name="hint_verification_code">Vui lòng nhập Đăng ký mã xác nhận</string>
     <string name="error_verification_code">Mã xác nhận đăng ký không đúng</string>
-    <string name="hint_verification_code_by_sms">SMS</string>
+    <string name="hint_verification_code_by_sms">(SMS)</string>
     <string name="error_verification_code_by_sms">Mã xác nhận không đúng</string>
     <string name="get_verification_code">Gửi</string>
     <string name="send_timer">Tên tài khoản này đã tồn tại</string>
