[調整] 23663 賽果結算-冠軍，選單、標題、欄位顯示與H5不一致

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -169,6 +169,7 @@
     <string name="friday2"> Fri</string>
     <string name="saturday2">Sat</string>
     <string name="sunday2">Sun</string>
+    <string name="sunday2_cn">Sun</string>
     <string name="january">January</string>
     <string name="february">February</string>
     <string name="march">March</string>
