--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -169,6 +169,7 @@
     <string name="friday2"> 周五</string>
     <string name="saturday2">周六</string>
     <string name="sunday2">周日</string>
+    <string name="sunday2_cn">周日</string>
     <string name="january">一月</string>
     <string name="february">二月</string>
     <string name="march">三月</string>
